# lite_star

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  start.sh
migrations/: env.py
migrations/versions/: 2025-04-08_first_d8ef386aa6c9.py
src/: config.py  controllers.py  database.py  models.py  schemas.py  services.py
